--- a/components/sections/sections.css
+++ b/components/sections/sections.css
@@ -72,3 +72,17 @@
   height: 100%;
   width: 100%;
 }
+
+@keyframes bounce-right {
+  0%, 100% {
+    transform: none;
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+  50% {
+    transform: translateX(25%);
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+.group:hover .group-hover\:animate-bounce-right {
+  animation: bounce-right 1s infinite;
+}
