Fixed Testimonials (mansory layout)

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,21 @@
 .calendly-spinner {
   display: none !important;
 }
+
+/* Testimonials Masonry */
+
+.testimonials-masonry-grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  width: 100%;
+}
+.testimonials-masonry-grid_column {
+  padding-left: 10px; /* gutter size */
+  padding-right: 10px; /* gutter size */
+}
+
+/* Style items */
+.testimonials-masonry-grid_column > div {
+  margin-bottom: 20px;
+}
